# bezier-motion-inbetweening

./: README.md  pyproject.toml  requirements.txt
scripts/: demo_constraint.py  demo_fit_toy.py
src/bezier_inbetweening/: __init__.py  bezier.py  constraints.py  fit.py  utils.py
src/bezier_inbetweening.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_bezier_eval.py  test_constraints.py  test_fit.py
