[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bezier-inbetweening"
version = "0.1.0"
description = "Toy Bézier motion inbetweening and keyjoint constraint control."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
keywords = ["animation", "motion", "bezier", "inbetweening", "keyframes"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5",
  "black>=24.0",
]

[tool.setuptools.packages.find]
where = ["src"]
